[package]
name = "jwtdecode"
version = "0.3.1"
authors = ["Kenneth Wang Pedersen <kenneth.pedersen@vipps.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
anyhow = "1.0.42"
serde_json = "1.0.59"
base64 = "0.13.0"
jsonpath_lib = "0.3.0"
